[package]
name = "basalt"
version = "0.1.0"
edition = "2021"
authors = ["gwirn"]
license = "MIT"
description = "A simple keyboard shortcut mapper"
readme = "README.md"
repository = "https://github.com/gwirn/basalt"
keywords = ["hotkey", "keyboard-shortcut", "productivity"]
categories = ["productivity"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.3"
